2011-10-04  Kent Tamura  <tkent@chromium.org>

        Introduce feature flags for incomplete input types
        https://bugs.webkit.org/show_bug.cgi?id=68971

        Reviewed by Hajime Morita.

        * Scripts/build-webkit:
        Add --input-type-{date,datetime,datetimelocal,month,time,week} flags.
        They are disabled by default.

2011-10-04  Adam Barth  <abarth@webkit.org>

        garden-o-matic doesn't launch it's UI on Lion
        https://bugs.webkit.org/show_bug.cgi?id=69349

        Reviewed by Darin Adler.

        It turns out that Lion is a bit more picky about file URLs.  This patch
        switches us from using a path to using an actual file URL, silencing
        the warning and making the tool actually launch on Lion.

        * Scripts/webkitpy/tool/servers/gardeningserver.py:

2011-10-04  Daniel Bates  <dbates@rim.com>

        Fix Perl undefined variable warning when using run-safari after
        <http://trac.webkit.org/changeset/96448> (https://bugs.webkit.org/show_bug.cgi?id=68662)

        Rubber-stamped by Alexey Proskuryakov.

        * Scripts/webkitdirs.pm:
        (runMacWebKitApp): Check that the optional function argument $useOpenCommand
        is defined before using it in a comparison operation.

2011-10-04  Scott Graham  <scottmg@chromium.org>

        Add GAMEPAD feature flag
        https://bugs.webkit.org/show_bug.cgi?id=66859

        Reviewed by Darin Fisher.

        * Scripts/build-webkit:

2011-10-04  Jon Lee  <jonlee@apple.com>

        REGRESSION (WK2): (Shift-)option-tabbing skips over elements when transitioning from chrome to webview
        https://bugs.webkit.org/show_bug.cgi?id=68412
        <rdar://problem/9988252>

        Reviewed by Darin Adler.

        In order to create a test for the bug, I had to update DRT and WKTR to create some
        widget that allows first responder status to move away from the main web view.

        Three methods were added to layoutTestController: addChromeInputField,