@@ -1,3 +1,12 @@
+2011-10-05  Balazs Kelemen  <kbalazs@webkit.org>
+
+        [Qt][WK2] Unreviewed build fix after r96643.
+
+        * WebKitTestRunner/qt/PlatformWebViewQt.cpp:
+        (WTR::PlatformWebView::addChromeInputField):
+        (WTR::PlatformWebView::removeChromeInputField):
+        (WTR::PlatformWebView::makeWebViewFirstResponder):
+
 2011-10-04  Kent Tamura  <tkent@chromium.org>
 
         Introduce feature flags for incomplete input types
